# compiler

./: .gitignore  LICENSE  README.md
benchmarks/http-server/: README.md
benchmarks/http-server/bun/: server-fork.ts  server.ts
benchmarks/http-server/c/: server.c
benchmarks/http-server/metascript/: server.ms
benchmarks/http-server/node/: server-fork.js  server.js
benchmarks/http-server/rust/: Cargo.toml  server.rs
docs/: LANG.md  NODE-TYPE.md  PINELINE.md
src/: index.ms
src/ast/: ast.ms  node.ms  printer.ms
src/diagnostics/: diagnostics.ms
src/lexer/: chars.ms  index.ms  lexer.ms  scanner.ms  state.ms  token.ms
src/parser/: context.ms  expression.ms  parser.ms  statement.ms  typeAnnotation.ms  util.ms
src/parser/expressions/: arrow.ms  call.ms  core.ms  match.ms  object.ms  precedence.ms  template.ms  util.ms
src/parser/statements/: control.ms  core.ms  declaration.ms  errorHandling.ms  util.ms
