[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "server.rs"

[dependencies]
hyper = { version = "1.5", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
tokio = { version = "1.41", features = ["rt-multi-thread", "net", "macros"] }
http-body-util = "0.1"
bytes = "1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
